// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingDetailsFeatures displays a pdf hyperlink when Pricing_Matrix url exists in sales listing 1`] = `
<DocumentFragment>
  <li
    class="responsive-content-item "
  >
    <header
      class="detail-header "
    >
      <span
        class="detail-header__image-container"
      >
        <img
          alt=""
          class="detail-header__image "
          src="listing-features.svg"
        />
      </span>
      <hgroup
        class="detail-header__hgroup"
      >
        <h2
          class="detail-header__title"
        >
          Features
        </h2>
        <span
          class="detail-header__subtitle"
        >
          Amenities and unit details
        </span>
        <span
          class="ui-icon ui-medium"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 32 32"
          >
            <path
              d="M28.267 6.133l-12.267 12.267-12.267-12.267-3.733 3.733 16 16 16-16z"
            />
          </svg>
        </span>
      </hgroup>
    </header>
    <div
      class="listing-detail-panel"
    >
      <dl
        class="column-definition-list"
      >
        <dt
          class="description__title"
        >
          Neighborhood
        </dt>
        <dd
          class="description__body"
        >
          <span>
            Tenderloin
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Built
        </dt>
        <dd
          class="description__body"
        >
          <span>
            2018
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Appliances
        </dt>
        <dd
          class="description__body translate"
        >
          <span>
            Landing at The San Francisco Shipyard: Refrigerator: Bosch Stainless Steel Refrigerator Bosch - 300 Series Compact Washer and Condensation Dryer Bosch Stainless Steel Slide In Gas Range with Hood Bosch Stainless Steel Dishwasher Honeywell Thermostat
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Services Covered by HOA Dues
        </dt>
        <dd
          class="description__body translate"
        >
          <span>
            Test Service
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Parking
        </dt>
        <dd
          class="description__body translate"
        >
          <span>
            Landing at The San Francisco Shipyard:

            <br />
            <br />
            One parking space is included in the sale price of each unit. The parking space will be resold with the unit within the maximum resale price.

            <br />
            <br />
            <br />
            <br />
            Palisades at The San Francisco Shipyard:

            <br />
            <br />
            Two bay parking spaces in attached garage are included in the sale price of each unit. The parking space will be resold with the unit within the maximum resale price.
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Smoking Policy
        </dt>
        <dd
          class="description__body translate"
        >
          <span>
            Smoking may cause problems
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Pets Policy
        </dt>
        <dd
          class="description__body translate"
        >
          <span>
            All pets are awesome!
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Unit Details
        </dt>
        <dd
          class="description__body"
        >
          <a
            href="https://www.example.com"
            target="_blank"
          >
            Download price and income limit for each unit (PDF).
          </a>
        </dd>
        <dt
          class="description__title"
        />
        <dd
          class="description__body"
        />
      </dl>
      <div
        class="mb-4"
      >
        <button
          aria-expanded="false"
          class="w-full "
          data-testid="content-accordion-button"
        >
          <div
            class="flex justify-between  accordion-blue-theme__bar  "
          >
            <h3
              class="toggle-header-content"
            >
              <strong>
                2 Bedroom
              </strong>
              : 2 units, 1199 - 1273 square feet
            </h3>
            <span
              class="ui-icon ui-base flex items-center"
              data-testid="accordion-open"
            >
              <svg
                fill="#0077DA"
                viewBox="0 0 32 32"
              >
                <path
                  d="M28.267 6.133l-12.267 12.267-12.267-12.267-3.733 3.733 16 16 16-16z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="mb-4"
      >
        <button
          aria-expanded="false"
          class="w-full "
          data-testid="content-accordion-button"
        >
          <div
            class="flex justify-between  accordion-blue-theme__bar  "
          >
            <h3
              class="toggle-header-content"
            >
              <strong>
                3 Bedroom
              </strong>
              : 5 units, 1041 - 1355 square feet
            </h3>
            <span
              class="ui-icon ui-base flex items-center"
              data-testid="accordion-open"
            >
              <svg
                fill="#0077DA"
                viewBox="0 0 32 32"
              >
                <path
                  d="M28.267 6.133l-12.267 12.267-12.267-12.267-3.733 3.733 16 16 16-16z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="mb-4"
      >
        <button
          aria-expanded="false"
          class="w-full "
          data-testid="content-accordion-button"
        >
          <div
            class="flex justify-between  accordion-blue-theme__bar  "
          >
            <h3
              class="toggle-header-content"
            >
              <strong>
                4 Bedroom
              </strong>
              : 1 unit, 1615 square feet
            </h3>
            <span
              class="ui-icon ui-base flex items-center"
              data-testid="accordion-open"
            >
              <svg
                fill="#0077DA"
                viewBox="0 0 32 32"
              >
                <path
                  d="M28.267 6.133l-12.267 12.267-12.267-12.267-3.733 3.733 16 16 16-16z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`ListingDetailsFeatures displays listing details features section when rental listing 1`] = `
<DocumentFragment>
  <li
    class="responsive-content-item "
  >
    <header
      class="detail-header "
    >
      <span
        class="detail-header__image-container"
      >
        <img
          alt=""
          class="detail-header__image "
          src="listing-features.svg"
        />
      </span>
      <hgroup
        class="detail-header__hgroup"
      >
        <h2
          class="detail-header__title"
        >
          Features
        </h2>
        <span
          class="detail-header__subtitle"
        >
          Amenities, unit details and additional fees
        </span>
        <span
          class="ui-icon ui-medium"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 32 32"
          >
            <path
              d="M28.267 6.133l-12.267 12.267-12.267-12.267-3.733 3.733 16 16 16-16z"
            />
          </svg>
        </span>
      </hgroup>
    </header>
    <div
      class="listing-detail-panel"
    >
      <dl
        class="column-definition-list"
      >
        <dt
          class="description__title"
        >
          Neighborhood
        </dt>
        <dd
          class="description__body"
        >
          <span>
            Hayes Valley
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Built
        </dt>
        <dd
          class="description__body"
        >
          <span>
            2009
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Smoking Policy
        </dt>
        <dd
          class="description__body translate"
        >
          <span>
            Non-smoking building
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Pets Policy
        </dt>
        <dd
          class="description__body translate"
        >
          <span>
            Dogs are not allowed in the building.
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Property Amenities
        </dt>
        <dd
          class="description__body translate"
        >
          <span>
            Laundry room, underground parking, courtyard, bike room
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Accessibility
        </dt>
        <dd
          class="description__body translate"
        >
          <span>
            Elevator to all floors
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Unit Features
        </dt>
        <dd
          class="description__body"
        />
      </dl>
      <div
        class="mb-4"
      >
        <button
          aria-expanded="false"
          class="w-full "
          data-testid="content-accordion-button"
        >
          <div
            class="flex justify-between  accordion-blue-theme__bar  "
          >
            <h3
              class="toggle-header-content"
            >
              <strong>
                2 Bedroom
              </strong>
              : 2 units, 1199 - 1273 square feet
            </h3>
            <span
              class="ui-icon ui-base flex items-center"
              data-testid="accordion-open"
            >
              <svg
                fill="#0077DA"
                viewBox="0 0 32 32"
              >
                <path
                  d="M28.267 6.133l-12.267 12.267-12.267-12.267-3.733 3.733 16 16 16-16z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="mb-4"
      >
        <button
          aria-expanded="false"
          class="w-full "
          data-testid="content-accordion-button"
        >
          <div
            class="flex justify-between  accordion-blue-theme__bar  "
          >
            <h3
              class="toggle-header-content"
            >
              <strong>
                3 Bedroom
              </strong>
              : 5 units, 1041 - 1355 square feet
            </h3>
            <span
              class="ui-icon ui-base flex items-center"
              data-testid="accordion-open"
            >
              <svg
                fill="#0077DA"
                viewBox="0 0 32 32"
              >
                <path
                  d="M28.267 6.133l-12.267 12.267-12.267-12.267-3.733 3.733 16 16 16-16z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="mb-4"
      >
        <button
          aria-expanded="false"
          class="w-full "
          data-testid="content-accordion-button"
        >
          <div
            class="flex justify-between  accordion-blue-theme__bar  "
          >
            <h3
              class="toggle-header-content"
            >
              <strong>
                4 Bedroom
              </strong>
              : 1 unit, 1615 square feet
            </h3>
            <span
              class="ui-icon ui-base flex items-center"
              data-testid="accordion-open"
            >
              <svg
                fill="#0077DA"
                viewBox="0 0 32 32"
              >
                <path
                  d="M28.267 6.133l-12.267 12.267-12.267-12.267-3.733 3.733 16 16 16-16z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="info-card bg-gray-100 border-0"
      >
        <div
          class="info-card__header"
        >
          <h3
            class="info-card__title"
          >
            Additional Fees
          </h3>
        </div>
        <section
          class="grid-section"
        >
          <div
            class="grid-section__header-container"
          />
          <div
            class="grid-section__inner md:grid md:grid-cols-2 md:gap-8 mb-5"
          >
            <div
              aria-label=""
              class="grid-item"
            >
              <div
                class="text-base"
              >
                Deposit
              </div>
              <div
                class="text-xl font-bold"
              >
                $2,102 - $2,355
              </div>
              <div
                class="text-sm"
              >
                or one month's rent
              </div>
              <div
                class="text-sm"
              >
                May be higher for lower credit scores
              </div>
            </div>
          </div>
        </section>
        <div
          class="info-card__columns text-xs"
        >
          <div
            class="info-card__column-2"
          >
            <span
              class="translate"
            >
              <p>
                Tenants pay for gas, electricity.

                <br />
                <br />
                For pet fees:  Cat is allowed with a $500 refundable deposit, $250 non-refundable cleaning fee and a pet addendum.
                <br />
                <br />
                <br />
                Dogs are not allowed in the building.
                <br />
                <br />
                <br />
                One parking space per unit available for $175 a month.
              </p>
            </span>
          </div>
        </div>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`ListingDetailsFeatures displays listing details features section when sales listing 1`] = `
<DocumentFragment>
  <li
    class="responsive-content-item "
  >
    <header
      class="detail-header "
    >
      <span
        class="detail-header__image-container"
      >
        <img
          alt=""
          class="detail-header__image "
          src="listing-features.svg"
        />
      </span>
      <hgroup
        class="detail-header__hgroup"
      >
        <h2
          class="detail-header__title"
        >
          Features
        </h2>
        <span
          class="detail-header__subtitle"
        >
          Amenities and unit details
        </span>
        <span
          class="ui-icon ui-medium"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 32 32"
          >
            <path
              d="M28.267 6.133l-12.267 12.267-12.267-12.267-3.733 3.733 16 16 16-16z"
            />
          </svg>
        </span>
      </hgroup>
    </header>
    <div
      class="listing-detail-panel"
    >
      <dl
        class="column-definition-list"
      >
        <dt
          class="description__title"
        >
          Neighborhood
        </dt>
        <dd
          class="description__body"
        >
          <span>
            Tenderloin
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Built
        </dt>
        <dd
          class="description__body"
        >
          <span>
            2018
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Appliances
        </dt>
        <dd
          class="description__body translate"
        >
          <span>
            Landing at The San Francisco Shipyard: Refrigerator: Bosch Stainless Steel Refrigerator Bosch - 300 Series Compact Washer and Condensation Dryer Bosch Stainless Steel Slide In Gas Range with Hood Bosch Stainless Steel Dishwasher Honeywell Thermostat
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Services Covered by HOA Dues
        </dt>
        <dd
          class="description__body translate"
        >
          <span>
            Test Service
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Parking
        </dt>
        <dd
          class="description__body translate"
        >
          <span>
            Landing at The San Francisco Shipyard:

            <br />
            <br />
            One parking space is included in the sale price of each unit. The parking space will be resold with the unit within the maximum resale price.

            <br />
            <br />
            <br />
            <br />
            Palisades at The San Francisco Shipyard:

            <br />
            <br />
            Two bay parking spaces in attached garage are included in the sale price of each unit. The parking space will be resold with the unit within the maximum resale price.
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Smoking Policy
        </dt>
        <dd
          class="description__body translate"
        >
          <span>
            Smoking may cause problems
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Pets Policy
        </dt>
        <dd
          class="description__body translate"
        >
          <span>
            All pets are awesome!
          </span>
        </dd>
        <dt
          class="description__title"
        >
          Unit Details
        </dt>
        <dd
          class="description__body"
        >
          <span />
        </dd>
        <dt
          class="description__title"
        />
        <dd
          class="description__body"
        />
      </dl>
      <div
        class="mb-4"
      >
        <button
          aria-expanded="false"
          class="w-full "
          data-testid="content-accordion-button"
        >
          <div
            class="flex justify-between  accordion-blue-theme__bar  "
          >
            <h3
              class="toggle-header-content"
            >
              <strong>
                2 Bedroom
              </strong>
              : 2 units, 1199 - 1273 square feet
            </h3>
            <span
              class="ui-icon ui-base flex items-center"
              data-testid="accordion-open"
            >
              <svg
                fill="#0077DA"
                viewBox="0 0 32 32"
              >
                <path
                  d="M28.267 6.133l-12.267 12.267-12.267-12.267-3.733 3.733 16 16 16-16z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="mb-4"
      >
        <button
          aria-expanded="false"
          class="w-full "
          data-testid="content-accordion-button"
        >
          <div
            class="flex justify-between  accordion-blue-theme__bar  "
          >
            <h3
              class="toggle-header-content"
            >
              <strong>
                3 Bedroom
              </strong>
              : 5 units, 1041 - 1355 square feet
            </h3>
            <span
              class="ui-icon ui-base flex items-center"
              data-testid="accordion-open"
            >
              <svg
                fill="#0077DA"
                viewBox="0 0 32 32"
              >
                <path
                  d="M28.267 6.133l-12.267 12.267-12.267-12.267-3.733 3.733 16 16 16-16z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="mb-4"
      >
        <button
          aria-expanded="false"
          class="w-full "
          data-testid="content-accordion-button"
        >
          <div
            class="flex justify-between  accordion-blue-theme__bar  "
          >
            <h3
              class="toggle-header-content"
            >
              <strong>
                4 Bedroom
              </strong>
              : 1 unit, 1615 square feet
            </h3>
            <span
              class="ui-icon ui-base flex items-center"
              data-testid="accordion-open"
            >
              <svg
                fill="#0077DA"
                viewBox="0 0 32 32"
              >
                <path
                  d="M28.267 6.133l-12.267 12.267-12.267-12.267-3.733 3.733 16 16 16-16z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
    </div>
  </li>
</DocumentFragment>
`;
